fixed transitions and spacings on containers

--- a/anna-sala/challenges/curriculum-css/style.css
+++ b/anna-sala/challenges/curriculum-css/style.css
@@ -5,11 +5,11 @@
   }
 
 :root {
-    --primary-color: #F07167;
-    --secondary-color: #FED9B7;
-    --complimentary-color: #00AFB9;
-    --contrast-color: #0081A7;
-    --light-color: #FDFCDC;
+    --primary-color: #FF8870;
+    --secondary-color: #FCD5CE;
+    --complimentary-color: #F9DCC4;
+    --contrast-color: #FEC89A;
+    --light-color: #F8EDEB;
     }
 
 .container {
@@ -22,24 +22,11 @@
   padding: 50px;
 }
 /* Styles applied on trigger */
+
 .container:target {
     margin-left: 70px;
-    opacity: 1;
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 10;
-}
-
-.container:target h3, h4 {
-    margin-left: 70px;
     opacity: 0;
-    animation: 2s fadeIn forwards .5s;
-}
-
-.container:target p, ul{
-    margin-left: 100px;
+    animation: 2s fadeIn forwards .3s;
 }
 
 /* End of styles applied on trigger */
@@ -59,7 +46,13 @@ nav a {
     padding: 10px;
     text-align: center;
 }
-
+.footer{
+    background: var(--secondary-color);
+    position: fixed;
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
+}
 nav {
     position: fixed;
     left: 0;
@@ -67,13 +60,13 @@ nav {
     display: flex;
     justify-content: space-around;
     flex-direction: column;
-    height: 100vh;
+    height: 90vh;
     background: var(--secondary-color);
 }
 
 
 #intro {
-    background:var(--primary-color);
+    background:var(--contrast-color);
     }
 
 #education {
@@ -90,6 +83,10 @@ background:var(--primary-color);
   
 #leadership {
     background: var(--light-color);
+}
+
+#personal-info{
+    background:var(--contrast-color);
 }
 
 @keyframes fadeIn {
